Add silent gear as 1.16.5 as test dependencies.